fix tool running under linux